src/objects/Knowledge_Base__c.object
<CustomObject>
    <customHelpPage>KnowledgeBaseContextHelp_Page</customHelpPage>
    <fields>
        <fullName>Area_of_Technology__c</fullName>
        <label>Area of Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Lightning Component</fullName>
                </value>
                <value>
                    <fullName>Lightning Experience</fullName>
                </value>
                <value>
                    <fullName>Limits</fullName>
                </value>
                <value>
                    <fullName>Process Builder</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Points__c</fullName>
        <label>Key Points</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <label>References</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Knowledge_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Knowledge Base</label>
        <referenceTo>Knowledge_Base__c</referenceTo>
        <relationshipLabel>Related Knowledge Base</relationshipLabel>
        <relationshipName>Related_Knowledge_Base</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Angular</fullName>
                </value>
                <value>
                    <fullName>AngularJS</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>HTML5</fullName>
                </value>
                <value>
                    <fullName>Javascript</fullName>
                </value>
                <value>
                    <fullName>JQuery</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Do_List__c</fullName>
        <label>To Do List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge Base</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Technology__c</columns>
        <columns>Area_of_Technology__c</columns>
        <columns>Status__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Knowledge Base Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Base</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>